# agent-patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/patterns/: README.md  plan_execute.md  react.md  reflection.md  router.md  supervisor.md
src/agent_patterns/: __init__.py
src/agent_patterns/plan_execute/: __init__.py
src/agent_patterns/react/: __init__.py
src/agent_patterns/reflection/: __init__.py
src/agent_patterns/router/: __init__.py
src/agent_patterns/supervisor/: __init__.py
tests/: test_patterns.py
