[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-patterns"
version = "0.1.0"
description = "Reference implementations of common agentic AI orchestration patterns in Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "agent-patterns contributors" }]
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false

[tool.hatch.build.targets.wheel]
packages = ["src/agent_patterns"]
